@@ -366,6 +366,19 @@
 			<radioposx>-19</radioposx>
 		</control>
 		
+		<!-- Music Fanart : show labels -->
+		<control type="radiobutton" id="121">
+			<include>ViewOptions.Button</include>
+			<label>42445</label>
+			<texturefocus border="2">dialogs/options/buttons/default-fo.png</texturefocus>
+			<onclick>Skin.ToggleSetting(infostrip.bigposters)</onclick>
+			<selected>!Skin.HasSetting(infostrip.bigposters)</selected>
+			<visible>Control.IsVisible(502) + [Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(sets)]</visible>
+			<textureradioon>buttons/radio/options-radio-button-fo.png</textureradioon>
+			<textureradiooff>buttons/radio/options-radio-button-nf.png</textureradiooff>
+			<radioposx>-19</radioposx>
+		</control>
+		
 		<!-------------------->
 		<!-- DiscartOptions -->
 		<!-------------------->
