@@ -3,7 +3,7 @@
     <allowoverlay>yes</allowoverlay>
     <views>50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,500,501,502</views>
     <backgroundcolor>0</backgroundcolor>
-    <onload condition="System.HasAddon(script.tvtunes) + Skin.HasSetting(TVTunes.Enabled)">RunScript(script.tvtunes,backend=True)</onload>
+    <onload condition="System.HasAddon(script.tvtunes) + Skin.HasSetting(TVTunes.Enabled) + !Player.HasMedia">RunScript(script.tvtunes,backend=True)</onload>
     <onload condition="System.HasAddon(script.tv.show.next.aired) + Library.HasContent(TVShows) + Skin.HasSetting(NextAired.Enabled)">RunScript(script.tv.show.next.aired,backend=True)</onload>
     <controls>
         
